--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -905,6 +905,25 @@ a, a:hover {
     padding: 0.5rem;
 
 }
+.tableHome {
+
+    font-size: 14px;
+    /*display: block;*/
+    width: auto;
+    max-width: 75%;
+    background-color: transparent;
+    border-collapse: collapse;
+    border-spacing: 0;
+    color: #353838;
+    text-align: center;
+    padding: 0.5rem;
+
+}
+.tableHome th, .tableHome td {
+    padding: 3px;
+    vertical-align: unset;
+    border-top: 1px solid #dee2e6;
+}
 
 .table th, .table td {
     padding: 3px;
