--- a/src/main/resources/templates/view/home.html
+++ b/src/main/resources/templates/view/home.html
@@ -56,20 +56,20 @@
                             </tr>
                             </tbody>
                         </table>
-                        <table align="center" border="0" cellpadding="1" cellspacing="1" style="width:500px"
+                        <table align="center" border="0" cellpadding="1" cellspacing="1" style="width:300px"
                                class=tableHome>
                             <tbody><h5>TOP 3 Clients</h5>
                             <tr>
                                 <td th:each="r : ${top3Clients}">
 
-                                    <label style="width:150px"><p
+                                    <label style="width:100px"><p
                                             th:text="${r+'$'}"></p></label></td>
                             </tr>
                             </tbody>
                         </table>
 
 
-                        <table style="width:auto" class=table>
+                        <table  class=table style="width:390px">
                             <tr><h5>Current Active Reservations</h5>
                                 <th>No</th>
                                 <th>Client:</th>
@@ -98,7 +98,7 @@
                         </table>
 
                         <br>
-                        <table style="width:auto" class=table>
+                        <table  class=table style="width:390px">
                             <tr><h5>Upcoming Reservations</h5>
                                 <th>No</th>
                                 <th>Client:</th>
@@ -126,7 +126,7 @@
                             </tr>
                         </table>
                         <br>
-                        <table style="width:auto" class=table>
+                        <table  class=table style="width:390px">
                             <tr><h5>Last two Invoices</h5>
                                 <th>No</th>
                                 <th>Client:</th>
@@ -148,7 +148,7 @@
                             </tr>
                         </table>
                         <br>
-                        <table style="width:auto" class=table>
+                        <table  class=table style="width:390px">
                             <tr><h5>Last two Costs</h5>
                                 <th>No</th>
                                 <th>Vendor</th>
