--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,20 @@
         <table align="center" border="0" cellpadding="1" cellspacing="1" style="width:380px">
             <tbody>
 
-            <td><p1 class="welcome"> Welcome dear ! With this software you can easily manage a dog hotel.
-                Admin Role - has access to users, can change prices, can change company information.
-                Аll other options are available for User Role.To test the software please log in with the details provided below or register.
-                The registered users are with User Role. Nice day :)
-            </p1>
+            <td align="center">
+                <p1  class="welcome"> Welcome !</p1>
+                <br>
+                <p1 class="welcome"> With this software you can easily manage a Dog Hotel.</p1>
+                <br>
+                <p1 class="welcome">Admin Role - has access to users, can change prices, can change company information.</p1>
+                <br>
+                <p1 class="welcome">Аll other options are available for User Role.</p1>
+                <br>
+                <p1 class="welcome">To test the software please log in with the details provided below or register.</p1>
+                <br>
+                <p1 class="welcome">The registered users are with User Role.</p1>
+                <br>
+                <p1 class="welcome">Nice day :)</p1>
             </td>
 
             </tbody>
@@ -36,6 +45,12 @@
 
             </tbody>
         </table>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
 
     </th:block>
 </th:block>
