--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
                 <br>
                 <p1 class="welcome">Аll other options are available for User Role.</p1>
                 <br>
-                <p1 class="welcome">To test the software please log in with the details provided below or register.</p1>
+                <p1 class="welcome">To test the software please login or register in with the data provided below.</p1>
                 <br>
                 <p1 class="welcome">The registered users are with User Role.</p1>
                 <br>
@@ -49,7 +49,7 @@
         <br>
         <br>
         <br>
-        <br>
+
 
 
     </th:block>
