--- a/src/main/resources/templates/view/edit/dogEdit.html
+++ b/src/main/resources/templates/view/edit/dogEdit.html
@@ -24,7 +24,7 @@
         <br>
         <div class="button_back">
             <a class="nav-link h5" id="nav-link">
-                <button type="button" class="btn btn-danger btn-lg btnTable"><span
+                <button type="button" class="btn btn-danger btn-lg btnList"><span
                         class="glyphicon glyphicon-ok"></span>Back
                 </button>
             </a>
@@ -162,7 +162,7 @@
                 <div class="button_submit">
                     <div>
                         <div>
-                            <input type="submit" class="btn btn-danger btn-lg btnTable" value="Edit Dog"/>
+                            <input type="submit" class="btn btn-danger btn-lg btnList" value="Edit Dog"/>
                         </div>
                     </div>
                 </div>
