--- a/src/main/resources/templates/view/edit/reservationEdit.html
+++ b/src/main/resources/templates/view/edit/reservationEdit.html
@@ -13,7 +13,7 @@
         <br>
         <div class="button_back">
             <a class="nav-link h5" id="nav-link">
-                <button type="button" class="btn btn-danger btn-lg btnTable"><span
+                <button type="button" class="btn btn-danger btn-lg btnList"><span
                         class="glyphicon glyphicon-ok"></span>Back
                 </button>
             </a>
@@ -145,7 +145,7 @@
                 <div class="button_submit">
                     <div>
                         <div>
-                            <input type="submit" class="btn btn-danger btn-lg btnTable " value="Edit Reservation"/>
+                            <input type="submit" class="btn btn-danger btn-lg btnList " value="Edit Reservation"/>
                         </div>
                     </div>
                 </div>
