--- a/src/main/resources/templates/view/edit/companyEdit.html
+++ b/src/main/resources/templates/view/edit/companyEdit.html
@@ -24,7 +24,7 @@
             <tr>
                 <td><div class="button_back">
                     <a class="nav-link h5" id="nav-link">
-                        <button type="button" class="btn btn-danger btn-lg btnTable"><span
+                        <button type="button" class="btn btn-danger btn-lg btnList"><span
                                 class="glyphicon glyphicon-ok"></span>Back
                         </button>
                     </a>
@@ -83,7 +83,7 @@
                         <div class="button_submit">
                             <div>
                                 <div>
-                                    <input type="submit" class="btn btn-danger btn-lg btnTable" value="Save"/>
+                                    <input type="submit" class="btn btn-danger btn-lg btnList" value="Save"/>
                                 </div>
                             </div>
                         </div>
