--- a/src/main/resources/templates/view/register.html
+++ b/src/main/resources/templates/view/register.html
@@ -13,7 +13,7 @@
             <td>
                 <div class="button_back">
                     <a class="nav-link h5" id="nav-link">
-                        <button type="button" class="btn btn-danger btn-lg btn3d"><span
+                        <button type="button" class="btn btn-danger btn-lg btnList"><span
                                 class="glyphicon glyphicon-ok"></span>Back
                         </button>
                     </a>
@@ -46,7 +46,7 @@
                             </p>
                             <label>Default Role:</label><br>
                             <div class="form-group">
-                                <select th:field="${userDTO.role}">
+                                <select th:field="${userDTO.role}" >
                                     <option value="USER">USER</option>
                                 </select>
                             </div>
@@ -58,7 +58,7 @@
                         <div class="button_submit">
                             <div>
                                 <div>
-                                    <input type="submit" class="btn btn-danger btn-lg btn3d" value="Register"/>
+                                    <input type="submit" class="btn btn-danger btn-lg btnList" value="Register"/>
                                 </div>
 
                             </div>
