--- a/src/main/resources/templates/view/home.html
+++ b/src/main/resources/templates/view/home.html
@@ -69,7 +69,7 @@
                         </table>
 
 
-                        <table  class=table style="width:390px">
+                        <table  class=table >
                             <tr><h5>Current Active Reservations</h5>
                                 <th>No</th>
                                 <th>Client:</th>
@@ -98,7 +98,7 @@
                         </table>
 
                         <br>
-                        <table  class=table style="width:390px">
+                        <table  class=table >
                             <tr><h5>Upcoming Reservations</h5>
                                 <th>No</th>
                                 <th>Client:</th>
@@ -126,7 +126,7 @@
                             </tr>
                         </table>
                         <br>
-                        <table  class=table style="width:390px">
+                        <table  class=table >
                             <tr><h5>Last two Invoices</h5>
                                 <th>No</th>
                                 <th>Client:</th>
@@ -148,7 +148,7 @@
                             </tr>
                         </table>
                         <br>
-                        <table  class=table style="width:390px">
+                        <table  class=table >
                             <tr><h5>Last two Costs</h5>
                                 <th>No</th>
                                 <th>Vendor</th>
