--- a/src/main/resources/templates/view/table/dogTable.html
+++ b/src/main/resources/templates/view/table/dogTable.html
@@ -21,11 +21,11 @@
                             <thead>
                             <tr>
                                 <th scope="col"><form th:action="@{/view/table/searchDogName}" method="get">
-                                    <input type="text" name="dogName" th:value="${dogName}"  placeholder="Find by Dog Name" size="20" >
+                                    <input type="text" name="dogName" th:value="${dogName}" class="searchArea" placeholder="Find by Dog Name" size="20" >
                                     <button type="submit" class="btn btn-info" >Search</button>
                                 </form></th>
                                 <th scope="col"><form th:action="@{/view/table/searchClientEmail}" method="get">
-                                    <input type="text" name="clientEmail" th:value="${clientEmail}"  placeholder="Find by Client Email" size="20" >
+                                    <input type="text" name="clientEmail" th:value="${clientEmail}" class="searchArea" placeholder="Find by Client Email" size="20" >
                                     <button type="submit" class="btn btn-info" >Search</button>
                                 </form></th>
                             </tr>
