--- a/src/main/resources/templates/view/table/reservationTable.html
+++ b/src/main/resources/templates/view/table/reservationTable.html
@@ -28,11 +28,11 @@
                         <thead>
                         <tr>
                             <th scope="col"><form th:action="@{/view/table/searchReservationNumber}" method="get">
-                                <input type="text" name="reservationNumber" th:value="${reservationNumber}"  placeholder="Find by Reservation Number" size="20" >
+                                <input type="text" name="reservationNumber" th:value="${reservationNumber}"  class="searchArea" placeholder="Find by Reservation Number" size="20" >
                                 <button type="submit" class="btn btn-info" >Search</button>
                             </form></th>
                             <th scope="col"><form th:action="@{/view/table/searchReservationByClientEmail}" method="get">
-                                <input type="text" name="clientEmail" th:value="${clientEmail}"  placeholder="Find by Client Mail" size="20" >
+                                <input type="text" name="clientEmail" th:value="${clientEmail}" class="searchArea" placeholder="Find by Client Mail" size="20" >
                                 <button type="submit" class="btn btn-info" >Search</button>
                             </form></th>
                             <th></th>
