--- a/src/main/resources/templates/view/register.html
+++ b/src/main/resources/templates/view/register.html
@@ -28,7 +28,7 @@
                           th:method="post"
                           th:object="${userDTO}"
                     >
-                        <div class="form-group">
+                        <div class="login-box">
                             <label>UserName:</label><br>
                             <input type="text" id="description" th:field="${userDTO.username}" placeholder="Please enter Username"/><br>
 
@@ -54,7 +54,7 @@
                                 Invalid data!
                             </p>
                         </div>
-
+                        <br>
                         <div class="button_submit">
                             <div>
                                 <div>
