--- a/src/main/resources/templates/view/table/clientTable.html
+++ b/src/main/resources/templates/view/table/clientTable.html
@@ -18,20 +18,20 @@
                         Client is used!
                     </p>
                     <div class="table-responsive-client">
-                        <table align="left" border="0" cellpadding="1" cellspacing="1" style="width:600px">
+                        <table align="left" border="0" cellpadding="1" cellspacing="1" style="width:auto">
                             <thead>
                             <tr>
                                 <th scope="col">
                                     <form th:action="@{/view/table/searchClientByPhone}" method="get">
                                         <input type="text" name="clientPhone" th:value="${clientPhone}"
-                                               placeholder="Find by Client Phone" size="20">
+                                               placeholder="Find by Client Phone" class="searchArea" size="20">
                                         <button type="submit" class="btn btn-info">Search</button>
                                     </form>
                                 </th>
                                 <th scope="col">
                                     <form th:action="@{/view/table/searchClientByEmail}" method="get">
                                         <input type="text" name="clientEmail" th:value="${clientEmail}"
-                                               placeholder="Find by Client Email" size="20">
+                                               placeholder="Find by Client Email" size="20" class="searchArea">
                                         <button type="submit" class="btn btn-info">Search</button>
                                     </form>
                                 </th>
