--- a/src/main/resources/templates/view/table/priceTableUser.html
+++ b/src/main/resources/templates/view/table/priceTableUser.html
@@ -9,41 +9,48 @@
                             <h1>Price List</h1>
                         </div>
 
-                        <table class=table>
-                            <tr>
-                                <th>No</th>
-                                <th>Stay House S</th>
-                                <th>Stay House M</th>
-                                <th>Stay House L</th>
-                                <th>Feeding</th>
-                                <th>Deworming</th>
-                                <th>Training</th>
-                                <th>Bathing</th>
-                                <th>Combing</th>
-                                <th>Paws cleaning</th>
-                                <th>Еar cleaning</th>
-                                <th>Nails trimming</th>
-                                <th>Created</th>
-                                <th></th>
-                                <th></th>
-                            </tr>
-                            <tr th:each="p : ${prices}">
-                                <td th:text="${p.id}"></td>
-                                <td th:text="${p.priceStayS+'$'}"></td>
-                                <td th:text="${p.priceStayM+'$'}"></td>
-                                <td th:text="${p.priceStayL+'$'}"></td>
-                                <td th:text="${p.priceFood}"></td>
-                                <td th:text="${p.priceDeworming}"></td>
-                                <td th:text="${p.priceTraining}"></td>
-                                <td th:text="${p.priceBathing}"></td>
-                                <td th:text="${p.priceCombing}"></td>
-                                <td th:text="${p.pricePaws}"></td>
-                                <td th:text="${p.priceEars}"></td>
-                                <td th:text="${p.priceNails}"></td>
-                                <td th:text="${#temporals.format(p.dateCreate,'dd.MM.yyyy')}"></td>
+                        <div class="table-responsive-price">
+                            <table class=table>
+                                <tr>
+                                    <th>No</th>
+                                    <th>Stay House S</th>
+                                    <th>Stay House M</th>
+                                    <th>Stay House L</th>
+                                    <th>Feeding</th>
+                                    <th>Deworming</th>
+                                    <th>Training</th>
+                                    <th>Bathing</th>
+                                    <th>Combing</th>
+                                    <th>Paws cleaning</th>
+                                    <th>Еar cleaning</th>
+                                    <th>Nails trimming</th>
+                                    <th>Created</th>
 
-                            </tr>
-                        </table>
+                                </tr>
+                                <tr th:each="p : ${prices}">
+                                    <td th:text="${p.id}"></td>
+                                    <td th:text="${p.priceStayS+'$'}"></td>
+                                    <td th:text="${p.priceStayM+'$'}"></td>
+                                    <td th:text="${p.priceStayL+'$'}"></td>
+                                    <td th:text="${p.priceFood+'$'}"></td>
+                                    <td th:text="${p.priceDeworming+'$'}"></td>
+                                    <td th:text="${p.priceTraining+'$'}"></td>
+                                    <td th:text="${p.priceBathing+'$'}"></td>
+                                    <td th:text="${p.priceCombing+'$'}"></td>
+                                    <td th:text="${p.pricePaws+'$'}"></td>
+                                    <td th:text="${p.priceEars+'$'}"></td>
+                                    <td th:text="${p.priceNails+'$'}"></td>
+                                    <td th:text="${#temporals.format(p.dateCreate,'dd.MM.yyyy')}"></td>
+
+                                </tr>
+                            </table>
+                        </div>
+                        <div th:if="${prices.totalPages > 0}" class="pagination"
+                             th:each="pageNumber : ${pageNumbers}">
+                            <a th:href="@{priceTable(size=${prices.size}, page=${pageNumber})}"
+                               th:text=${pageNumber}
+                               th:class="${pageNumber==prices.number + 1} ? active"></a>
+                        </div>
                     </div>
                 </td>
             </tr>
