--- a/src/main/resources/templates/view/table/clientTable.html
+++ b/src/main/resources/templates/view/table/clientTable.html
@@ -7,7 +7,8 @@
 
 
                     <div class="page-header">
-                        <h1>Client List</h1>
+                        <h1 ><img align="center" src="#" height="45px" width="45px"
+                                 th:src="@{${'/pics/client.png'}}">Client List</h1>
                     </div>
                     <a class="nav-link h5" th:href="@{/view/add/clientAdd}">
                         <button type="button" class="btn btn-danger btn-lg btnTable"><span
