--- a/src/main/resources/templates/view/table/costTable.html
+++ b/src/main/resources/templates/view/table/costTable.html
@@ -6,7 +6,8 @@
                 <td>
 
                     <div class="page-header">
-                        <h1>Costs List</h1>
+                        <h1><img align="center" src="#" height="45px" width="45px"
+                                 th:src="@{${'/pics/cost.png'}}">Costs List</h1>
                     </div>
                     <a class="nav-link h5" th:href="@{/view/add/costAdd}">
                         <button type="button" class="btn btn-danger btn-lg btnTable"><span
