--- a/src/main/resources/templates/view/table/priceTable.html
+++ b/src/main/resources/templates/view/table/priceTable.html
@@ -6,7 +6,8 @@
                 <td>
                     <div class="table-center">
                         <div class="page-header">
-                            <h1>Price List</h1>
+                            <h1><img align="center" src="#" height="45px" width="45px"
+                                     th:src="@{${'/pics/prices.png'}}">Price List</h1>
                         </div>
                         <a class="nav-link h5" th:href="@{/view/add/priceAdd}">
                             <button type="button" class="btn btn-danger btn-lg btnTable"><span
