--- a/src/main/resources/templates/view/table/priceTableUser.html
+++ b/src/main/resources/templates/view/table/priceTableUser.html
@@ -6,7 +6,8 @@
                 <td>
                     <div class="table-center">
                         <div class="page-header">
-                            <h1>Price List</h1>
+                            <h1><img align="center" src="#" height="45px" width="45px"
+                                     th:src="@{${'/pics/prices.png'}}">Price List</h1>
                         </div>
 
                         <div class="table-responsive-price">
