--- a/src/main/resources/templates/view/add/behaviorAdd.html
+++ b/src/main/resources/templates/view/add/behaviorAdd.html
@@ -36,7 +36,9 @@
 
                         <small th:if="${#fields.hasErrors('name')}"
                                th:errors="*{name}"
-                               class="text-light form-text bg-danger "></small>
+                               class="text-light form-text bg-danger ">
+
+                        </small>
 
                     </div>
 
